# mcp-protector

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
config/: example.toml
docs/: agent-integration.md  audit-log-schema.md  config-schema.md  debugging.md  operations.md  security-review-2026-02-20.md
src/: audit.rs  config.rs  main.rs  policy.rs  proxy.rs  shutdown.rs
src/transport/: agent_http.rs  agent_stdio.rs  mod.rs  upstream_https.rs  upstream_stdio.rs
tests/: bearer_auth.rs  config_validation.rs  ip_allowlist.rs  policy_enforcement.rs  proxy_e2e.rs  validate_config_cmd.rs
tests/common/: mod.rs
tests/e2e/: conftest.py  requirements.txt  test_auth.py  test_http.py  test_stdio.py
